# projeto-final-PWEB

./: .env  Dockerfile  LICENSE  README(pt-br).md  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py  services.py  views.py
app/static/: styles.css
app/templates/: ativos.html  cadastro.html  index.html  listagem.html
database/: connection.py  init_db.py  models.py
projeto_final_pweb/: main.py  schemas.py  services.py  views.py
projeto_final_pweb/static/: styles.css
projeto_final_pweb/templates/: ativos.html  cadastro.html  index.html  listagem.html
