[tool.poetry]
name = "projeto-final-pweb"
version = "0.1.0"
description = ""
authors = ["Rafael Venancio <rafael.venancio08.06@gmail.com>", "Wesley Oliveira <wesley.ricardo@sempreceub.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
